# my_chat

./: .gitignore
backend/: pyproject.toml
backend/app/: main.py  uow.py
backend/app/api/: dependencies.py
backend/app/api/routers/: auth.py  chat.py  group.py
backend/app/core/: config.py  exception.py  exception_handler.py  security.py
backend/app/db/: session.py
backend/app/models/: base.py  group_members.py  groups.py  messages.py  users.py
backend/app/repositories/: base.py  group.py  user.py
backend/app/schemas/: auth.py  common.py  group.py  user.py
backend/app/services/: group.py  user.py
frontend/: green-grass-field-with-blue-sky-ad-white-cloud-nature-landscape-background-free-photo.jpg:Zone.Identifier  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  config.js  styles.css
frontend/src/lib/: api.js
frontend/src/pages/: AuthPage.jsx  MainPage.jsx
